# libsodium

./: .travis.yml  Makefile.in  configure  configure.ac  meson.build
builds/: emscripten.txt
contrib/: Makefile.in
dist-build/: Makefile.in
msvc-scripts/: Makefile.in
packaging/dotnet-core/: prepare.py
src/: Makefile.in
src/libsodium/: Makefile.in  meson.build
src/libsodium/crypto_generichash/blake2b/ref/: blake2b-ref.c
src/libsodium/include/: Makefile.in  meson.build
src/libsodium/sodium/: utils.c
test/: Makefile.in
test/default/: Makefile.in  meson.build
